--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
         </nav>
     </header>
     <main>
-        <section class="section section--hero">
-
-        </section>
+        <section class="section section--hero"></section>
+        <section class="section section--about"></section>
     </main>
 </body>
 </html>
