--- a/index.html
+++ b/index.html
@@ -13,14 +13,23 @@
         <nav>
             <ul class="navFlex">
                 <li><a href="#" class="navLink">Home</a></li>
-                <li><a href="#" class="navLink">About us</a></li>
+                <li><a href="#" class="navLink">Over ons</a></li>
                 <li><a href="#" class="navLink">Contact</a></li>
+                <li><a href="login.html" class="navLink">Aanmelden / Registreren</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="section section--hero"></section>
-        <section class="section section--about"></section>
+        <section class="section section--about">
+            <h1 class="title">Over ons</h1>
+
+            <p class="content"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde pariatur laudantium quia expedita consequuntur. Eos veritatis quia sunt cupiditate? Animi minima fugiat, excepturi eveniet sapiente explicabo tenetur nisi vel alias.
+            Ipsa, architecto sapiente, temporibus vitae sed quo iure dolorem, nihil ipsam exercitationem illo saepe officia repudiandae unde similique asperiores sunt ipsum est. Commodi voluptatibus suscipit dolorum architecto quae, odit soluta.
+            Excepturi culpa possimus accusantium veniam dicta fugit incidunt error necessitatibus veritatis, libero officia? Sint dolore earum nihil eos voluptates, laborum ratione, iusto ab doloremque libero nesciunt? Nisi cupiditate consequatur voluptatibus?
+            Beatae cum mollitia non quis fugiat optio accusamus. Omnis atque adipisci officiis tempore commodi similique, repellat fuga sapiente ullam eius est, dolorum tempora, alias necessitatibus laborum nesciunt praesentium laudantium debitis? </p>
+
+        </section>
     </main>
 </body>
 </html>
