--- a/index.html
+++ b/index.html
@@ -12,23 +12,33 @@
         <div class="logo"></div>
         <nav>
             <ul class="navFlex">
-                <li><a href="#" class="navLink">Home</a></li>
-                <li><a href="#" class="navLink">Over ons</a></li>
-                <li><a href="#" class="navLink">Contact</a></li>
-                <li><a href="login.html" class="navLink">Aanmelden / Registreren</a></li>
+                <li><a href="#home" class="navLink">Home</a></li>
+                <li><a href="#about" class="navLink">Over ons</a></li>
+                <li><a href="#contact" class="navLink">Contact</a></li>
+                <li><a href="login.html" class="navLink">Aanmelden </a>/ <a href="register.html" class="navLink">Registreren</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="section section--hero"></section>
+        <section class="section section--hero" id="home"></section>
         <section class="section section--about">
+            <div id="about"></div>
             <h1 class="title">Over ons</h1>
 
             <p class="content"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde pariatur laudantium quia expedita consequuntur. Eos veritatis quia sunt cupiditate? Animi minima fugiat, excepturi eveniet sapiente explicabo tenetur nisi vel alias.
             Ipsa, architecto sapiente, temporibus vitae sed quo iure dolorem, nihil ipsam exercitationem illo saepe officia repudiandae unde similique asperiores sunt ipsum est. Commodi voluptatibus suscipit dolorum architecto quae, odit soluta.
             Excepturi culpa possimus accusantium veniam dicta fugit incidunt error necessitatibus veritatis, libero officia? Sint dolore earum nihil eos voluptates, laborum ratione, iusto ab doloremque libero nesciunt? Nisi cupiditate consequatur voluptatibus?
             Beatae cum mollitia non quis fugiat optio accusamus. Omnis atque adipisci officiis tempore commodi similique, repellat fuga sapiente ullam eius est, dolorum tempora, alias necessitatibus laborum nesciunt praesentium laudantium debitis? </p>
+            <br><br>
+            <p class="content"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde pariatur laudantium quia expedita consequuntur. Eos veritatis quia sunt cupiditate? Animi minima fugiat, excepturi eveniet sapiente explicabo tenetur nisi vel alias.
+                Ipsa, architecto sapiente, temporibus vitae sed quo iure dolorem, nihil ipsam exercitationem illo saepe officia repudiandae unde similique asperiores sunt ipsum est. Commodi voluptatibus suscipit dolorum architecto quae, odit soluta.
+                Excepturi culpa possimus accusantium veniam dicta fugit incidunt error necessitatibus veritatis, libero officia? Sint dolore earum nihil eos voluptates, laborum ratione, iusto ab doloremque libero nesciunt? Nisi cupiditate consequatur voluptatibus?
+                Beatae cum mollitia non quis fugiat optio accusamus. Omnis atque adipisci officiis tempore commodi similique, repellat fuga sapiente ullam eius est, dolorum tempora, alias necessitatibus laborum nesciunt praesentium laudantium debitis? </p>
 
+        </section>
+        <section class="section section--contact" >
+            <div id="contact"></div>
+            <h1 class="title">Contact</h1>
         </section>
     </main>
 </body>
